--- a/src/styles/Contact.scss
+++ b/src/styles/Contact.scss
@@ -47,8 +47,7 @@
     }
     .input {
       display: flex;
-  box-sizing: border-box;
-
+      box-sizing: border-box;
     }
     .input--top {
       width: 100%;
@@ -69,25 +68,24 @@
       background-color: #333333;
       box-sizing: border-box;
     }
+    button {
+      /* display: inline-block; */
+      /* vertical-align: top; */
+      width: 120px;
+      height: 50px;
+      padding: 10px 15px;
+      margin-bottom: 50px;
+      border: 1px solid #08fdd8;
+      font-size: 14px;
+      font-weight: 700;
+      color: #08fdd8;
+      text-transform: uppercase;
+      text-decoration: none;
+    }
+
+    button:hover {
+      background-color: #08fdd8;
+      color: #1d1d1d;
+    }
   }
-  .btn {
-    /* display: inline-block; */
-    /* vertical-align: top; */
-    width: 150px;
-    height: 100px;
-    padding: 10px 15px;
-    margin-bottom: 50px;
-    border: 1px solid #08fdd8;
-    font-size: 14px;
-    font-weight: 700;
-    color: #08fdd8;
-    text-transform: uppercase;
-    text-decoration: none;
-  }
-  
-  .btn:hover {
-    background-color: #08fdd8;
-    color: #1d1d1d;
-  }
-  
 }
