--- a/src/styles/Contact.scss
+++ b/src/styles/Contact.scss
@@ -88,5 +88,24 @@
       background-color: #08fdd8;
       color: #1d1d1d;
     }
+    .button {
+      /* display: inline-block; */
+      /* vertical-align: top; */
+      width: 120px;
+      height: 50px;
+      padding: 10px 15px;
+      margin-bottom: 50px;
+      border: 1px solid #08fdd8;
+      font-size: 14px;
+      font-weight: 700;
+      color: #08fdd8;
+      text-transform: uppercase;
+      text-decoration: none;
+    }
+
+    .button:hover {
+      background-color: #08fdd8;
+      color: #1d1d1d;
+    }
   }
 }
